# palm-migrate

./: .gitignore  CODE_OF_CONDUCT.md  README.md  TERMS.md  pyproject.toml
gpt_migrate/: ai.py  config.py  main.py  requirements.txt
gpt_migrate/steps/: debug.py  test.py
palm_migrate/: ai.py  main.py  utils.py
palm_migrate/prompts/p3_debug/: identify_file
palm_migrate/steps/: debug.py  test.py
